# textc

./: CMakeLists.txt  README.md  text_compiler.cmake
test/hello_world/: CMakeLists.txt  helloworld.cpp
textc/: imported_text.hpp  textc_main.cpp
